// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "indusind-eazydiner",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-diners-club-black-metal",
    "indusind-eazydiner-platinum",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-premier",
    "indusind-eazydiner",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "indusind-eazydiner-platinum",
    "amex-platinum-travel",
    "hdfc-regalia-gold",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "axis-fibe",
    "yes-first-preferred",
  ],
  "combo-premium-travel": [
    "hsbc-travelone",
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "hdfc-regalia-gold",
    "icici-adani-one-signature",
    "axis-horizon",
    "indigo-sbi-elite",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest",
    "bobcard-eterna",
    "sbi-card-miles-elite",
    "indusind-eazydiner",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-horizon",
    "axis-magnus",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-privilege",
    "axis-flipkart",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "au-ixigo",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "hsbc-premier",
    "bobcard-etihad-guest",
    "icici-makemytrip",
    "idfc-ashva",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "idfc-wow",
    "au-ixigo",
    "idfc-mayura",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "kotak-solitaire",
    "axis-magnus",
    "axis-magnus-burgundy",
    "yes-marquee",
    "idfc-mayura",
    "kotak-white-reserve",
    "sc-beyond",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-diners-club-black-metal",
    "au-ixigo",
    "hdfc-shoppers-stop-black",
    "kotak-solitaire",
    "hdfc-diners-club-privilege",
    "bobcard-etihad-guest-premium",
  ],
  "issuer-amex": [
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-atlas",
    "axis-airtel",
    "axis-flipkart-super-elite",
    "axis-ace",
    "axis-indigo-premium",
    "axis-horizon",
    "axis-privilege-easy",
    "axis-fibe",
    "axis-magnus",
    "axis-flipkart",
    "axis-magnus-burgundy",
    "axis-samsung-signature",
  ],
  "issuer-hdfc": [
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-black-metal",
    "hdfc-shoppers-stop-black",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy-orange",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-coral-rupay",
    "icici-adani-one-signature",
    "icici-coral",
    "icici-amazon-pay",
    "icici-times-black",
    "icici-adani-one-platinum",
    "icici-hpcl-super-saver",
    "icici-makemytrip",
    "icici-rubyx",
    "icici-sapphiro-rupay",
    "icici-sapphiro",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "krisflyer-sbi-apex",
    "sbi-card-pulse",
    "sbi-cashback",
    "reliance-sbi-prime",
    "sbi-card-elite",
    "indigo-sbi-elite",
    "sbi-card-prime",
    "phonepe-sbi-purple",
    "tata-neu-infinity-sbi",
    "titan-sbi",
    "bpcl-sbi-octane",
  ],
  "lifetime-free": [
    "indusind-eazydiner-platinum",
    "au-ixigo",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "federal-imperio",
    "indusind-legend",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
  ],
  "lounge": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-diners-club-black-metal",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "hdfc-shoppers-stop-black",
    "kotak-solitaire",
  ],
  "lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-diners-club-black-metal",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "hdfc-shoppers-stop-black",
    "kotak-solitaire",
  ],
  "max-fee-5000-query": [
    "kotak-infinite",
    "amex-gold",
    "indusind-eazydiner",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner-platinum",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "hdfc-shoppers-stop-black",
    "kotak-solitaire",
  ],
  "max-fee-zero": [
    "kotak-infinite",
    "indusind-eazydiner-platinum",
    "au-ixigo",
    "kotak-solitaire",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "icici-amazon-pay",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "amex-smartearn",
    "cheq-au",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-samsung-signature",
    "flipkart-sbi",
    "axis-flipkart",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "axis-fibe",
    "hsbc-live-plus",
    "axis-rewards",
    "axis-ace",
    "axis-select",
    "hsbc-rupay-cashback",
    "axis-my-zone",
    "sc-digismart",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
    "axis-airtel",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
    "au-ixigo",
  ],
  "segment-beginner": [
    "au-ixigo",
    "phonepe-sbi-select-black",
    "indusind-eazydiner-platinum",
    "hdfc-diners-club-privilege",
    "amex-smartearn",
    "tata-neu-infinity-sbi",
    "kotak-zen-signature",
    "hsbc-live-plus",
    "hsbc-visa-platinum",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop",
    "yes-kiwi",
  ],
  "segment-mid-premium": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "yes-marquee",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "sbi-card-miles-elite",
    "bobcard-eterna",
    "amex-membership-rewards",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "hsbc-travelone",
    "axis-indigo-premium",
    "hdfc-regalia-gold",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "sc-ultimate",
    "yes-marquee",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "sbi-card-miles-elite",
    "bobcard-eterna",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "aurum-sbi",
    "krisflyer-sbi-apex",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "indusind-eazydiner",
    "amex-gold",
    "hdfc-infinia-metal",
    "amex-membership-rewards",
    "sc-ultimate",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "indusind-eazydiner-platinum",
    "hdfc-diners-club-black-metal",
  ],
  "spend-international": [
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "bobcard-eterna",
    "amex-gold",
    "bobcard-premier",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "indusind-eazydiner",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-diners-club-black-metal",
    "indusind-eazydiner-platinum",
  ],
  "spend-level-light": [
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "au-ixigo",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "indusind-eazydiner",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-diners-club-black-metal",
    "phonepe-sbi-select-black",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "indusind-eazydiner",
    "axis-magnus-burgundy",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "yes-kiwi",
    "axis-airtel",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "sbi-cashback",
    "hsbc-rupay-cashback",
    "hdfc-phonepe-ultimo",
    "phonepe-sbi-purple",
    "axis-ace",
    "hdfc-millennia",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "axis-fibe",
    "yes-first-preferred",
  ],
  "usecase-entertainment": [
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "hdfc-diners-club-privilege",
    "hsbc-live-plus",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "sbi-cashback",
    "hsbc-rupay-cashback",
    "sbi-card-elite",
    "rbl-world-max",
    "sbi-card-prime",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "idfc-first-power",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-premium",
    "icici-hpcl-super-saver",
    "idfc-first-earn",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "indusind-eazydiner",
    "au-ixigo",
    "kotak-cashback-plus",
    "rbl-shoprite",
    "bpcl-sbi-octane",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "sbi-cashback",
  ],
  "usecase-online": [
    "indusind-eazydiner",
    "csb-jupiter-edge-plus",
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "kotak-cashback-plus",
    "axis-cashback",
    "au-ixigo",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "axis-fibe",
    "yes-marquee",
    "yes-reserv",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "hsbc-visa-platinum",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "indusind-eazydiner",
    "hdfc-diners-club-black-metal",
    "hsbc-travelone",
    "kotak-solitaire",
    "sc-ultimate",
    "amex-membership-rewards",
    "phonepe-sbi-select-black",
    "amex-gold",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "indusind-eazydiner-platinum",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "amex-gold",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "indusind-eazydiner-platinum",
    "hdfc-marriott-bonvoy",
    "hdfc-tata-neu-infinity",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-platinum-travel",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-beyond",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "indusind-eazydiner-platinum",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "indusind-eazydiner-platinum",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "bobcard-eterna",
    "yes-first-preferred",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "rbl-icon",
  ],
  "combo-premium-travel": [
    "hsbc-travelone",
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "hdfc-regalia-gold",
    "icici-adani-one-signature",
    "axis-horizon",
    "indigo-sbi-elite",
    "hdfc-marriott-bonvoy",
    "bobcard-etihad-guest",
    "bobcard-eterna",
    "sbi-card-miles-elite",
    "indusind-eazydiner",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-horizon",
    "axis-magnus",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-privilege",
    "axis-flipkart",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "au-ixigo",
    "kotak-solitaire",
    "idfc-mayura",
    "rbl-world-safari",
    "hsbc-premier",
    "bobcard-etihad-guest",
    "icici-makemytrip",
    "idfc-ashva",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "idfc-wow",
    "au-ixigo",
    "idfc-mayura",
    "rbl-world-safari",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "axis-magnus-burgundy",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "yes-marquee",
    "axis-magnus",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "icici-times-black",
    "aurum-sbi",
    "sc-beyond",
  ],
  "issuer-amex": [
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-atlas",
    "axis-flipkart-super-elite",
    "axis-airtel",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-ace",
    "axis-privilege-easy",
    "axis-privilege",
    "axis-fibe",
    "axis-rewards",
    "axis-magnus",
    "axis-flipkart",
  ],
  "issuer-hdfc": [
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-black-metal",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "hdfc-shoppers-stop-black",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-adani-one-signature",
    "icici-adani-one-platinum",
    "icici-coral-rupay",
    "icici-times-black",
    "icici-coral",
    "icici-makemytrip",
    "icici-amazon-pay",
    "icici-rubyx",
    "icici-platinum-chip",
    "icici-sapphiro-rupay",
    "icici-sapphiro",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "tata-neu-infinity-sbi",
    "sbi-cashback",
    "sbi-card-elite",
    "reliance-sbi-prime",
    "krisflyer-sbi-apex",
    "landmark-rewards-sbi-prime",
    "sbi-card-pulse",
    "shaurya-select-sbi",
    "tata-neu-plus-sbi",
  ],
  "lifetime-free": [
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "hsbc-visa-platinum",
    "indusind-tiger",
    "yes-kiwi",
    "csb-jupiter-edge-plus",
    "scapia-federal",
    "scapia-bobcard",
    "idfc-first-wealth",
    "hsbc-rupay-platinum",
    "federal-imperio",
    "axis-fibe",
  ],
  "lounge": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "axis-magnus-burgundy",
    "sc-beyond",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "icici-times-black",
    "sc-priority-visa-infinite",
  ],
  "lounge-query": [
    "hsbc-premier",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "axis-magnus-burgundy",
    "sc-beyond",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "icici-times-black",
    "sc-priority-visa-infinite",
  ],
  "max-fee-5000-query": [
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "amex-membership-rewards",
    "sc-ultimate",
    "kotak-solitaire",
    "phonepe-sbi-select-black",
    "amex-gold",
    "kotak-infinite",
    "au-ixigo",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "kotak-infinite",
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "hsbc-visa-platinum",
    "yes-kiwi",
    "indusind-tiger",
    "csb-jupiter-edge-plus",
    "sc-priority-visa-infinite",
    "hsbc-rupay-platinum",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "hdfc-moneyback-plus",
    "amex-smartearn",
    "cheq-au",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-flipkart",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "axis-fibe",
    "hsbc-live-plus",
    "axis-rewards",
    "axis-ace",
    "axis-select",
    "hsbc-rupay-cashback",
    "axis-my-zone",
    "sc-digismart",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
    "axis-airtel",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
    "au-ixigo",
  ],
  "segment-beginner": [
    "au-ixigo",
    "phonepe-sbi-select-black",
    "indusind-eazydiner-platinum",
    "hdfc-diners-club-privilege",
    "amex-smartearn",
    "tata-neu-infinity-sbi",
    "kotak-zen-signature",
    "hsbc-live-plus",
    "hsbc-visa-platinum",
    "hdfc-tata-neu-infinity",
    "hdfc-shoppers-stop",
    "yes-kiwi",
  ],
  "segment-mid-premium": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "yes-marquee",
    "sc-ultimate",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "sbi-card-miles-elite",
    "bobcard-eterna",
    "amex-membership-rewards",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "hsbc-travelone",
    "axis-indigo-premium",
    "hdfc-regalia-gold",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "sc-ultimate",
    "yes-marquee",
    "equitas-powermiles",
    "hdfc-marriott-bonvoy",
    "sbi-card-miles-elite",
    "bobcard-eterna",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "aurum-sbi",
    "krisflyer-sbi-apex",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "axis-magnus-burgundy",
    "icici-times-black",
    "sc-ultimate",
    "kotak-white-reserve",
    "sc-priority-visa-infinite",
  ],
  "spend-international": [
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "sc-ultimate",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "bobcard-eterna",
    "amex-gold",
    "bobcard-premier",
    "scapia-federal",
    "scapia-bobcard",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "sc-ultimate",
    "yes-marquee",
    "hdfc-regalia-gold",
    "axis-magnus",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-priority-visa-infinite",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "amex-membership-rewards",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "sc-ultimate",
    "amex-gold",
    "hsbc-travelone",
    "kotak-solitaire",
    "kotak-infinite",
    "au-ixigo",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "indusind-eazydiner",
    "sc-ultimate",
    "hsbc-travelone",
    "amex-membership-rewards",
    "kotak-infinite",
    "bobcard-eterna",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "axis-magnus",
    "sc-ultimate",
    "yes-marquee",
    "icici-times-black",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "sbi-cashback",
    "hdfc-phonepe-ultimo",
    "axis-airtel",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "axis-ace",
    "hdfc-millennia",
    "titan-sbi",
    "csb-jupiter-edge-plus",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "yes-first-preferred",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
  ],
  "usecase-entertainment": [
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "hdfc-diners-club-privilege",
    "au-ixigo",
    "bobcard-eterna",
    "hdfc-marriott-bonvoy",
    "sbi-card-prime",
    "hsbc-live-plus",
    "rbl-world-max",
    "sbi-card-elite",
    "sbi-cashback",
    "yes-reserv",
  ],
  "usecase-fuel": [
    "idfc-first-power-plus",
    "bpcl-sbi-octane",
    "axis-indianoil-easy",
    "axis-indianoil",
    "hdfc-indianoil",
    "idfc-first-power",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "indusind-eazydiner",
    "sbi-card-prime",
    "au-ixigo",
    "bpcl-sbi-octane",
    "hdfc-moneyback-plus",
    "kotak-cashback-plus",
    "equitas-selfe",
    "rbl-platinum-maxima-plus",
    "rbl-shoprite",
  ],
  "usecase-online": [
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "sbi-cashback",
    "bobcard-eterna",
    "csb-jupiter-edge-plus",
    "hdfc-pixel-play",
    "simplyclick-sbi",
    "axis-cashback",
    "yes-pop-club",
    "rbl-cookies",
    "phonepe-sbi-purple",
    "kotak-cashback-plus",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "hsbc-visa-platinum",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "indusind-eazydiner",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "indusind-eazydiner",
      "equitas-selfe",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "amex-membership-rewards",
      "hdfc-infinia-metal",
      "indusind-eazydiner",
    ],
  },
  "category-rent": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "sc-ultimate",
      "amex-platinum-travel",
      "axis-magnus",
      "axis-magnus-burgundy",
      "sc-beyond",
    ],
  },
  "category-rent-payment": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "sc-ultimate",
      "amex-platinum-travel",
      "axis-magnus",
      "axis-magnus-burgundy",
      "sc-beyond",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "indusind-eazydiner",
      "equitas-selfe",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "indusind-eazydiner",
      "equitas-selfe",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "bobcard-eterna",
      "equitas-selfe",
      "sbi-card-prime",
      "sbi-card-elite",
    ],
  },
  "combo-premium-travel": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "bobcard-etihad-guest-premium",
      "indusind-eazydiner",
      "icici-adani-one-signature",
      "axis-horizon",
      "indigo-sbi-elite",
      "amex-membership-rewards",
      "sc-ultimate",
      "hdfc-marriott-bonvoy",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-indigo-premium",
      "axis-horizon",
      "axis-magnus",
      "axis-magnus-burgundy",
    ],
  },
  "forex": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "icici-amazon-pay",
      "hsbc-live-plus",
      "axis-ace",
    ],
    "Rewards cards": [
      "kotak-infinite",
      "icici-emeralde-private-metal",
      "sc-ultimate",
      "amex-membership-rewards",
      "bobcard-etihad-guest-premium",
    ],
  },
  "forex-zero": {
    "Cashback cards": [],
    "Rewards cards": [
      "bobcard-etihad-guest-premium",
      "idfc-wow",
      "scapia-federal",
      "scapia-bobcard",
      "au-ixigo",
      "kotak-solitaire",
      "idfc-mayura",
      "rbl-world-safari",
      "indusind-pioneer-heritage-metal",
    ],
  },
  "guest-lounge-query": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
      "axis-magnus",
      "yes-marquee",
      "axis-magnus-burgundy",
      "sc-beyond",
      "idfc-mayura",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "au-ixigo",
      "titan-sbi",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "yes-marquee",
      "axis-magnus",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
    ],
  },
  "issuer-amex": {
    "Cashback cards": [],
    "Rewards cards": [
      "amex-membership-rewards",
      "amex-gold",
      "amex-platinum-travel",
      "amex-smartearn",
      "amex-platinum-reserve",
      "amex-platinum",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-flipkart-super-elite",
      "axis-horizon",
      "axis-indigo-premium",
      "axis-privilege-easy",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-black-metal",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-coral-rupay",
      "icici-times-black",
      "icici-coral",
      "icici-makemytrip",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "phonepe-sbi-purple",
      "bpcl-sbi-octane",
      "titan-sbi",
    ],
    "Rewards cards": [
      "sbi-card-prime",
      "indigo-sbi-elite",
      "tata-neu-infinity-sbi",
      "sbi-card-elite",
      "reliance-sbi-prime",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indusind-eazydiner-platinum",
      "hsbc-visa-platinum",
      "indusind-tiger",
      "hsbc-rupay-platinum",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "au-ixigo",
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
      "axis-magnus",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "au-ixigo",
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
      "axis-magnus",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "amex-membership-rewards",
      "sc-ultimate",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "au-ixigo",
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "icici-amazon-pay",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "au-ixigo",
      "kotak-infinite",
      "indusind-eazydiner-platinum",
      "hsbc-visa-platinum",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "flipkart-sbi",
      "axis-flipkart",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "axis-fibe",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-my-zone",
      "axis-select",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "sbi-cashback",
      "axis-airtel",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "sbi-card-elite",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "indusind-eazydiner",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "kotak-solitaire",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "axis-airtel",
      "hdfc-swiggy-orange",
      "yes-kiwi",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indusind-eazydiner-platinum",
      "hdfc-diners-club-privilege",
      "amex-smartearn",
      "hdfc-shoppers-stop",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "bobcard-etihad-guest-premium",
      "indusind-eazydiner",
      "amex-platinum-travel",
      "equitas-powermiles",
      "sc-ultimate",
      "hdfc-marriott-bonvoy",
      "sbi-card-miles-elite",
    ],
  },
  "segment-premium": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "bobcard-etihad-guest-premium",
      "indusind-eazydiner",
      "amex-platinum-travel",
      "equitas-powermiles",
      "sc-ultimate",
      "hdfc-marriott-bonvoy",
      "sbi-card-miles-elite",
    ],
  },
  "segment-super-premium": {
    "Cashback cards": [],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
      "axis-magnus",
      "kotak-solitaire",
      "icici-times-black",
      "krisflyer-sbi-apex",
      "kotak-white-reserve",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "axis-airtel",
      "hsbc-live-plus",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hsbc-travelone",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "kotak-solitaire",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "icici-amazon-pay",
      "hsbc-live-plus",
      "axis-ace",
    ],
    "Rewards cards": [
      "kotak-infinite",
      "icici-emeralde-private-metal",
      "sc-ultimate",
      "amex-membership-rewards",
      "bobcard-etihad-guest-premium",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hdfc-phonepe-ultimo",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "kotak-solitaire",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "sbi-cashback",
      "hsbc-live-plus",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "indusind-eazydiner",
      "amex-membership-rewards",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "sbi-cashback",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-black-metal",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "kotak-solitaire",
    ],
  },
  "usecase-cashback": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "sbi-cashback",
      "hdfc-phonepe-ultimo",
      "axis-airtel",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "axis-ace",
    ],
    "Rewards cards": [
      "cheq-au",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "bobcard-eterna",
      "equitas-selfe",
      "sbi-card-prime",
      "sbi-card-elite",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "au-ixigo",
      "hsbc-rupay-cashback",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "hdfc-diners-club-privilege",
      "cheq-au",
      "au-ixigo",
      "bobcard-eterna",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "idfc-first-power-plus",
      "axis-indianoil-premium",
      "axis-indianoil",
      "axis-indianoil-easy",
      "hdfc-indianoil",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "equitas-selfe",
      "sbi-card-prime",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "bobcard-eterna",
      "yes-pop-club",
      "simplyclick-sbi",
      "rbl-cookies",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "cheq-au",
      "axis-fibe",
      "apollo-sbi-select",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "indusind-eazydiner",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "bobcard-eterna",
      "yes-pop-club",
      "simplyclick-sbi",
      "rbl-cookies",
    ],
  },
  "premium-degrade-single": {
    "Cashback cards": [
      "titan-sbi",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "bobcard-etihad-guest-premium",
      "indusind-eazydiner",
      "amex-platinum-travel",
      "equitas-powermiles",
      "sc-ultimate",
      "hdfc-marriott-bonvoy",
      "sbi-card-miles-elite",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "indusind-eazydiner",
    ],
  },
}
`;
